--- a/result-processing/testing/csv-processing.ipynb
+++ b/result-processing/testing/csv-processing.ipynb
@@ -9,7 +9,18 @@
     "\"\"\"Importing Modules\"\"\"\n",
     "import matplotlib as plt\n",
     "import numpy as np\n",
-    "import pandas as pd\n"
+    "import pandas as pd\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Importing and filtering KEM cpu csv files\"\"\"\n"
    ]
   }
  ],
