begining of results procesing

--- a/result-processing/testing/csv-processing.ipynb
+++ b/result-processing/testing/csv-processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,12 +16,239 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Operation</th>\n",
+       "      <th>Iterations</th>\n",
+       "      <th>Total time (s)</th>\n",
+       "      <th>Time (us): mean</th>\n",
+       "      <th>pop. stdev</th>\n",
+       "      <th>CPU cycles: mean</th>\n",
+       "      <th>pop. stdev</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>BIKE-L1</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>keygen</td>\n",
+       "      <td>4444</td>\n",
+       "      <td>3.000</td>\n",
+       "      <td>675.144</td>\n",
+       "      <td>307.547</td>\n",
+       "      <td>3037715</td>\n",
+       "      <td>1383879</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>encaps</td>\n",
+       "      <td>18373</td>\n",
+       "      <td>3.000</td>\n",
+       "      <td>163.288</td>\n",
+       "      <td>33.086</td>\n",
+       "      <td>734498</td>\n",
+       "      <td>148708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>decaps</td>\n",
+       "      <td>904</td>\n",
+       "      <td>3.001</td>\n",
+       "      <td>3320.226</td>\n",
+       "      <td>376.977</td>\n",
+       "      <td>14940791</td>\n",
+       "      <td>1695878</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>BIKE-L3</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112</th>\n",
+       "      <td>decaps</td>\n",
+       "      <td>884</td>\n",
+       "      <td>3.003</td>\n",
+       "      <td>3397.067</td>\n",
+       "      <td>235.567</td>\n",
+       "      <td>15286438</td>\n",
+       "      <td>1059652</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113</th>\n",
+       "      <td>FrodoKEM-1344-SHAKE</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>114</th>\n",
+       "      <td>keygen</td>\n",
+       "      <td>232</td>\n",
+       "      <td>3.009</td>\n",
+       "      <td>12969.431</td>\n",
+       "      <td>1879.029</td>\n",
+       "      <td>58363067</td>\n",
+       "      <td>8455537</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>115</th>\n",
+       "      <td>encaps</td>\n",
+       "      <td>212</td>\n",
+       "      <td>3.014</td>\n",
+       "      <td>14214.769</td>\n",
+       "      <td>987.238</td>\n",
+       "      <td>63967156</td>\n",
+       "      <td>4442225</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>116</th>\n",
+       "      <td>decaps</td>\n",
+       "      <td>208</td>\n",
+       "      <td>3.002</td>\n",
+       "      <td>14431.885</td>\n",
+       "      <td>3289.615</td>\n",
+       "      <td>64944243</td>\n",
+       "      <td>14803707</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>116 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Operation                               Iterations    Total time (s)   \\\n",
+       "1    BIKE-L1                                                                 \n",
+       "2    keygen                                        4444             3.000    \n",
+       "3    encaps                                       18373             3.000    \n",
+       "4    decaps                                         904             3.001    \n",
+       "5    BIKE-L3                                                                 \n",
+       "..                                     ...           ...               ...   \n",
+       "112  decaps                                         884             3.003    \n",
+       "113  FrodoKEM-1344-SHAKE                                                     \n",
+       "114  keygen                                         232             3.009    \n",
+       "115  encaps                                         212             3.014    \n",
+       "116  decaps                                         208             3.002    \n",
+       "\n",
+       "      Time (us): mean    pop. stdev    CPU cycles: mean             pop. stdev  \n",
+       "1                                                                               \n",
+       "2             675.144       307.547                      3037715       1383879  \n",
+       "3             163.288        33.086                       734498        148708  \n",
+       "4            3320.226       376.977                     14940791       1695878  \n",
+       "5                                                                               \n",
+       "..                 ...           ...                          ...          ...  \n",
+       "112          3397.067       235.567                     15286438       1059652  \n",
+       "113                                                                             \n",
+       "114         12969.431      1879.029                     58363067       8455537  \n",
+       "115         14214.769       987.238                     63967156       4442225  \n",
+       "116         14431.885      3289.615                     64944243      14803707  \n",
+       "\n",
+       "[116 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"Importing and filtering KEM cpu csv files\"\"\"\n",
+    "#Declaring initial variables\n",
+    "kem_prefix = \"test-kem-speed-\"\n",
+    "\n",
+    "\n",
+    "#Reading the csv files and removing\n",
+    "#for kem_file_count in range(1,16,1):\n",
+    "#filename = kem_prefix + str(kem_file_count) + \".csv\"\n",
+    "temp_df = pd.read_csv(\"test-kem-speed-1.csv\", delimiter=\"|\", index_col=False)\n",
+    "temp_df = temp_df.drop(0)\n",
+    "\n",
+    "#temp_df.to_csv(\"test.csv\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"Importing and filtering KEM cpu csv files\"\"\"\n"
+    "\"\"\"Importing and filtering KEM cpu csv files\"\"\"\n",
+    "#Declaring initial variables\n",
+    "kem_prefix = \"./og-files/test-kem-speed-\"\n",
+    "sig_prefix = \"./og-files/test-sig-speed\"\n",
+    "\n",
+    "#Reading the original csv files and formating\n",
+    "for file_count in range(1,16,1):\n",
+    "    #Formating KEM files\n",
+    "    filename_kem = kem_prefix + str(file_count) + \".csv\"\n",
+    "    temp_df = pd.read_csv(filename_kem, delimiter=\"|\", index_col=False)\n",
+    "    temp_df = temp_df.drop(0)\n",
+    "    temp_df.to_csv(\"test.csv\", index=False)\n",
+    "\n",
+    "    #Formating digital signature files\n",
+    "    filename = sig_prefix + str(file_count) + \".csv\"\n",
+    "    temp_df = pd.read_csv(\"\", delimiter=\"|\", index_col=False)\n",
+    "    temp_df = temp_df.drop(0)\n",
+    "    temp_df.to_csv(\"test.csv\", index=False)\n",
+    "\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -31,7 +258,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.0"
   },
   "orig_nbformat": 4,
