--- a/result-processing/testing/csv-processing.ipynb
+++ b/result-processing/testing/csv-processing.ipynb
@@ -16,6 +16,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def result_processing():\n",
+    "    \"\"\"Importing and processing result files\"\"\"\n",
+    "    #Declaring initial variables\n",
+    "    kem_prefix = \"./og-files/test-kem-speed-\"\n",
+    "    sig_prefix = \"./og-files/test-sig-speed\"\n",
+    "\n",
+    "    #Reading the original csv files and formating\n",
+    "    for file_count in range(1,16,1):\n",
+    "        #Formating KEM files\n",
+    "        filename_kem = kem_prefix + str(file_count) + \".csv\"\n",
+    "        temp_df = pd.read_csv(filename_kem, delimiter=\"|\", index_col=False)\n",
+    "        temp_df = temp_df.drop(0)\n",
+    "        temp_df.to_csv(\"test.csv\", index=False)\n",
+    "\n",
+    "        #Formating digital signature files\n",
+    "        filename = sig_prefix + str(file_count) + \".csv\"\n",
+    "        temp_df = pd.read_csv(\"\", delimiter=\"|\", index_col=False)\n",
+    "        temp_df = temp_df.drop(0)\n",
+    "        temp_df.to_csv(\"test.csv\", index=False)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
@@ -214,41 +242,6 @@
     "\n",
     "#temp_df.to_csv(\"test.csv\", index=False)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"Importing and filtering KEM cpu csv files\"\"\"\n",
-    "#Declaring initial variables\n",
-    "kem_prefix = \"./og-files/test-kem-speed-\"\n",
-    "sig_prefix = \"./og-files/test-sig-speed\"\n",
-    "\n",
-    "#Reading the original csv files and formating\n",
-    "for file_count in range(1,16,1):\n",
-    "    #Formating KEM files\n",
-    "    filename_kem = kem_prefix + str(file_count) + \".csv\"\n",
-    "    temp_df = pd.read_csv(filename_kem, delimiter=\"|\", index_col=False)\n",
-    "    temp_df = temp_df.drop(0)\n",
-    "    temp_df.to_csv(\"test.csv\", index=False)\n",
-    "\n",
-    "    #Formating digital signature files\n",
-    "    filename = sig_prefix + str(file_count) + \".csv\"\n",
-    "    temp_df = pd.read_csv(\"\", delimiter=\"|\", index_col=False)\n",
-    "    temp_df = temp_df.drop(0)\n",
-    "    temp_df.to_csv(\"test.csv\", index=False)\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
