further changes to csv processing

--- a/result-processing/testing/csv-processing.ipynb
+++ b/result-processing/testing/csv-processing.ipynb
@@ -23,22 +23,24 @@
     "def result_processing():\n",
     "    \"\"\"Importing and processing result files\"\"\"\n",
     "    #Declaring initial variables\n",
-    "    kem_prefix = \"./og-files/test-kem-speed-\"\n",
-    "    sig_prefix = \"./og-files/test-sig-speed\"\n",
+    "    og_dir = \"./og-files\"\n",
+    "    kem_prefix = \"test-kem-speed-\"\n",
+    "    sig_prefix = \"test-sig-speed\"\n",
     "\n",
-    "    #Reading the original csv files and formating\n",
-    "    for file_count in range(1,16,1):\n",
-    "        #Formating KEM files\n",
-    "        filename_kem = kem_prefix + str(file_count) + \".csv\"\n",
-    "        temp_df = pd.read_csv(filename_kem, delimiter=\"|\", index_col=False)\n",
-    "        temp_df = temp_df.drop(0)\n",
-    "        temp_df.to_csv(\"test.csv\", index=False)\n",
+    "    for type_count in range(1,4,1):\n",
+    "        #Reading the original csv files and formating\n",
+    "        for file_count in range(1,16,1):\n",
+    "            #Formating KEM files\n",
+    "            filename_kem = kem_prefix + str(file_count) + \".csv\"\n",
+    "            temp_df = pd.read_csv(filename_kem, delimiter=\"|\", index_col=False)\n",
+    "            temp_df = temp_df.drop(0)\n",
+    "            temp_df.to_csv(\"test.csv\", index=False)\n",
     "\n",
-    "        #Formating digital signature files\n",
-    "        filename = sig_prefix + str(file_count) + \".csv\"\n",
-    "        temp_df = pd.read_csv(\"\", delimiter=\"|\", index_col=False)\n",
-    "        temp_df = temp_df.drop(0)\n",
-    "        temp_df.to_csv(\"test.csv\", index=False)\n",
+    "            #Formating digital signature files\n",
+    "            filename = sig_prefix + str(file_count) + \".csv\"\n",
+    "            temp_df = pd.read_csv(\"\", delimiter=\"|\", index_col=False)\n",
+    "            temp_df = temp_df.drop(0)\n",
+    "            temp_df.to_csv(\"test.csv\", index=False)\n",
     "\n"
    ]
   },
