--- a/result-processing/testing/csv-processing.ipynb
+++ b/result-processing/testing/csv-processing.ipynb
@@ -28,6 +28,8 @@
     "    sig_prefix = \"test-sig-speed\"\n",
     "\n",
     "    for type_count in range(1,4,1):\n",
+    "        type_dir = \"./type-\" + str(type_count)\n",
+    "\n",
     "        #Reading the original csv files and formating\n",
     "        for file_count in range(1,16,1):\n",
     "            #Formating KEM files\n",
