--- a/result-processing/testing/csv-processing.ipynb
+++ b/result-processing/testing/csv-processing.ipynb
@@ -23,26 +23,27 @@
     "def result_processing():\n",
     "    \"\"\"Importing and processing result files\"\"\"\n",
     "    #Declaring initial variables\n",
-    "    og_dir = \"./og-files\"\n",
     "    kem_prefix = \"test-kem-speed-\"\n",
     "    sig_prefix = \"test-sig-speed\"\n",
     "\n",
     "    for type_count in range(1,4,1):\n",
-    "        type_dir = \"./type-\" + str(type_count)\n",
-    "\n",
+    "        type_dir = \"./type-\" + str(type_count) + \"/\"\n",
+    "        og_dir = \"./og-files/\" + str(type_count) + \".csv\"\n",
     "        #Reading the original csv files and formating\n",
     "        for file_count in range(1,16,1):\n",
     "            #Formating KEM files\n",
-    "            filename_kem = kem_prefix + str(file_count) + \".csv\"\n",
-    "            temp_df = pd.read_csv(filename_kem, delimiter=\"|\", index_col=False)\n",
+    "            filename_kem_pre = kem_prefix + str(file_count) + \".csv\"\n",
+    "            temp_df = pd.read_csv(filename_kem_pre, delimiter=\"|\", index_col=False)\n",
     "            temp_df = temp_df.drop(0)\n",
-    "            temp_df.to_csv(\"test.csv\", index=False)\n",
+    "            filename_kem = type_dir + kem_prefix + str(file_count) + \".csv\"\n",
+    "            temp_df.to_csv(filename_kem, index=False)\n",
     "\n",
     "            #Formating digital signature files\n",
-    "            filename = sig_prefix + str(file_count) + \".csv\"\n",
-    "            temp_df = pd.read_csv(\"\", delimiter=\"|\", index_col=False)\n",
+    "            filename_sig_pre = sig_prefix + str(file_count) + \".csv\"\n",
+    "            temp_df = pd.read_csv(filename_sig_pre, delimiter=\"|\", index_col=False)\n",
     "            temp_df = temp_df.drop(0)\n",
-    "            temp_df.to_csv(\"test.csv\", index=False)\n",
+    "            filename_sig = type_dir + sig_prefix + str(file_count) + \".csv\"\n",
+    "            temp_df.to_csv(filename_sig, index=False)\n",
     "\n"
    ]
   },
