--- a/result-processing/testing/csv-processing.ipynb
+++ b/result-processing/testing/csv-processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,35 +16,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def result_processing():\n",
+    "def speed_processing():\n",
     "    \"\"\"Importing and processing result files\"\"\"\n",
     "    #Declaring initial variables\n",
     "    kem_prefix = \"test-kem-speed-\"\n",
-    "    sig_prefix = \"test-sig-speed\"\n",
+    "    sig_prefix = \"test-sig-speed-\"\n",
     "\n",
     "    for type_count in range(1,4,1):\n",
-    "        type_dir = \"./type-\" + str(type_count) + \"/\"\n",
-    "        og_dir = \"./og-files/\" + str(type_count) + \".csv\"\n",
+    "        type_dir = \"./csv-speed/type-\" + str(type_count) + \"/\"\n",
+    "        og_dir = \"./z_og-files/\" + str(type_count) + \"/\"\n",
     "        #Reading the original csv files and formating\n",
     "        for file_count in range(1,16,1):\n",
     "            #Formating KEM files\n",
-    "            filename_kem_pre = kem_prefix + str(file_count) + \".csv\"\n",
+    "            filename_kem_pre = og_dir + kem_prefix + str(file_count) + \".csv\"\n",
     "            temp_df = pd.read_csv(filename_kem_pre, delimiter=\"|\", index_col=False)\n",
     "            temp_df = temp_df.drop(0)\n",
     "            filename_kem = type_dir + kem_prefix + str(file_count) + \".csv\"\n",
     "            temp_df.to_csv(filename_kem, index=False)\n",
     "\n",
     "            #Formating digital signature files\n",
-    "            filename_sig_pre = sig_prefix + str(file_count) + \".csv\"\n",
+    "            filename_sig_pre = og_dir + sig_prefix + str(file_count) + \".csv\"\n",
     "            temp_df = pd.read_csv(filename_sig_pre, delimiter=\"|\", index_col=False)\n",
     "            temp_df = temp_df.drop(0)\n",
     "            filename_sig = type_dir + sig_prefix + str(file_count) + \".csv\"\n",
     "            temp_df.to_csv(filename_sig, index=False)\n",
-    "\n"
+    "\n",
+    "\n",
+    "speed_processing()\n"
    ]
   },
   {
@@ -265,12 +267,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
+    "hash": "570feb405e2e27c949193ac68f46852414290d515b0ba6e5d90d076ed2284471"
    }
   }
  },
