--- a/result-processing/testing/csv-processing.ipynb
+++ b/result-processing/testing/csv-processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,7 @@
     "import matplotlib as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import re\n",
     "\n",
     "\n"
    ]
@@ -251,11 +252,43 @@
     "\n",
     "#temp_df.to_csv(\"test.csv\", index=False)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (907745798.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[3], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    with open(\"test.txt\", \"w\") as lines\u001b[0m\n\u001b[1;37m                                       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "peak = -1\n",
+    "with open(\"test.txt\", \"w\") as lines:\n",
+    "    for line in lines: \n",
+    "        if line.startswith(\" Detailed snapshots: [\"):\n",
+    "            match=re.search(\"\\d+ \\(peak\\).*\", line)\n",
+    "            if match:\n",
+    "                peak = int(match.group(0).split()[0])\n",
+    "        if (peak > 0):\n",
+    "            if line.startswith('{: >3d}'.format(peak)): # remove \",\" and print all numbers except first:\n",
+    "                nl = line.replace(\",\", \"\")\n",
+    "                res = nl.split()\n",
+    "                del res[0]\n",
+    "                #print(\" \".join(res))\n",
+    "print(res)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -269,12 +302,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "570feb405e2e27c949193ac68f46852414290d515b0ba6e5d90d076ed2284471"
+    "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
    }
   }
  },
