--- a/result-processing/testing/csv-processing.ipynb
+++ b/result-processing/testing/csv-processing.ipynb
@@ -255,35 +255,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (907745798.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[3], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    with open(\"test.txt\", \"w\") as lines\u001b[0m\n\u001b[1;37m                                       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['maxBytes', 'maxHeap', 'extHeap', 'maxStack']\n",
+      "['3511853', '98912', '6844', '44', '92024']\n",
+      "[]\n"
      ]
     }
    ],
    "source": [
+    "filednames = [\"maxBytes\", \"maxHeap\", \"extHeap\", \"maxStack\"]\n",
+    "def get_peak(mem_file, peak_metrics):\n",
+    "    \"\"\"Takes the current massif.out file and gets the peak memeory metrics. \n",
+    "        It is comes from the run_mem.py script found in OQS Profiling Project\n",
+    "        https://github.com/open-quantum-safe/profiling\"\"\"\n",
     "\n",
-    "peak = -1\n",
-    "with open(\"test.txt\", \"w\") as lines:\n",
-    "    for line in lines: \n",
-    "        if line.startswith(\" Detailed snapshots: [\"):\n",
-    "            match=re.search(\"\\d+ \\(peak\\).*\", line)\n",
-    "            if match:\n",
-    "                peak = int(match.group(0).split()[0])\n",
-    "        if (peak > 0):\n",
-    "            if line.startswith('{: >3d}'.format(peak)): # remove \",\" and print all numbers except first:\n",
-    "                nl = line.replace(\",\", \"\")\n",
-    "                res = nl.split()\n",
-    "                del res[0]\n",
-    "                #print(\" \".join(res))\n",
-    "print(res)"
+    "    #Parsing funciton from OQS Profile Project\n",
+    "    #Gets max memory metric from algorithm operation\n",
+    "    peak = -1\n",
+    "    with open(mem_file, \"r\") as lines:\n",
+    "        for line in lines: \n",
+    "            if line.startswith(\" Detailed snapshots: [\"):\n",
+    "                match=re.search(\"\\d+ \\(peak\\).*\", line)\n",
+    "                if match:\n",
+    "                    peak = int(match.group(0).split()[0])\n",
+    "            if (peak > 0):\n",
+    "                if line.startswith('{: >3d}'.format(peak)): # remove \",\" and print all numbers except first:\n",
+    "                    nl = line.replace(\",\", \"\")\n",
+    "                    peak_metrics = nl.split()\n",
+    "                    del peak_metrics[0]\n",
+    "                    #print(\" \".join(res))\n",
+    "    print(peak_metrics)\n",
+    "    return peak_metrics\n",
+    "\n",
+    "peak_metrics = []\n",
+    "mem_file = \"test.txt\"\n",
+    "print(filednames)\n",
+    "get_peak(mem_file, peak_metrics)\n",
+    "print(peak_metrics)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['maxBytes', 'maxHeap', 'extHeap', 'maxStack']\n",
+      "['3511853', '98912', '6844', '44', '92024']\n",
+      "['3511853', '98912', '6844', '44', '92024']\n",
+      "[]\n",
+      "['3511853', '98912', '6844', '44', '92024']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "fieldnames = [\"maxBytes\", \"maxHeap\", \"extHeap\", \"maxStack\"]\n",
+    "\n",
+    "def get_peak(mem_file, peak_metrics):\n",
+    "    \"\"\"Takes the current massif.out file and gets the peak memory metrics. \n",
+    "        It comes from the run_mem.py script found in OQS Profiling Project\n",
+    "        https://github.com/open-quantum-safe/profiling\"\"\"\n",
+    "\n",
+    "    # Parsing function from OQS Profile Project\n",
+    "    # Gets max memory metric from algorithm operation\n",
+    "    peak = -1\n",
+    "    with open(mem_file, \"r\") as lines:\n",
+    "        for line in lines: \n",
+    "            if line.startswith(\" Detailed snapshots: [\"):\n",
+    "                match = re.search(r\"(\\d+) \\(peak\\).*\", line)\n",
+    "                if match:\n",
+    "                    peak = int(match.group(1))\n",
+    "            if peak > 0:\n",
+    "                if line.startswith('{: >3d}'.format(peak)): # remove \",\" and print all numbers except first:\n",
+    "                    nl = line.replace(\",\", \"\")\n",
+    "                    peak_metrics.extend(nl.split()[1:])\n",
+    "                    # print(\" \".join(res))\n",
+    "    print(peak_metrics)\n",
+    "    return peak_metrics\n",
+    "\n",
+    "peak_metrics = []\n",
+    "mem_file = \"test.txt\"\n",
+    "print(fieldnames)\n",
+    "peak_metrics = get_peak(mem_file, peak_metrics)\n",
+    "print(peak_metrics)\n",
+    "peak_metrics.clear()\n",
+    "print(peak_metrics)\n",
+    "peak_metrics = get_peak(mem_file, peak_metrics)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
