--- a/result-processing/parsing-scripts/jupyter-parse.ipynb
+++ b/result-processing/parsing-scripts/jupyter-parse.ipynb
@@ -30,7 +30,7 @@
     "kem_algs = []\n",
     "sig_algs = []\n",
     "#root_dir = \"/pqc/pqc-eval-tools/\"\n",
-    "root_dir = \"../\"\n",
+    "root_dir = \"../../\"\n",
     "\n",
     "#***********************************************************************\n",
     "def get_algs():\n",
