--- a/result-processing/parsing-scripts/jupyter-parse.ipynb
+++ b/result-processing/parsing-scripts/jupyter-parse.ipynb
@@ -36,15 +36,19 @@
     "def get_algs():\n",
     "    \"\"\"Function for creating list of algorithms\"\"\"\n",
     "\n",
+    "    # Setting alg text file directories\n",
+    "    kem_algs_file = root_dir + \"result-processing/algs/kem-algs-list.txt\"\n",
+    "    sig_algs_file = root_dir + \"result-processing/algs/sig-algs-list.txt\"\n",
+    "\n",
     "    # Getting the kem algs\n",
-    "    with open(\"algs/kem-algs-list.txt\", \"r\") as kem_file:\n",
+    "    with open(kem_algs_file, \"r\") as kem_file:\n",
     "\n",
     "        for line in kem_file:\n",
     "            line = line.strip()\n",
     "            kem_algs.append(line)\n",
     "    \n",
     "    # Getting the digital siganture algorithms\n",
-    "    with open(\"algs/sig-algs-list.txt\", \"r\") as alg_file:\n",
+    "    with open(sig_algs_file, \"r\") as alg_file:\n",
     "\n",
     "        for line in alg_file:\n",
     "            line = line.strip()\n",
