--- a/result-processing/parsing-scripts/jupyter-parse.ipynb
+++ b/result-processing/parsing-scripts/jupyter-parse.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,8 @@
      "text": [
       "Preparing to Parse Results:\n",
       "\n",
-      "Parsing results... \n"
+      "Parsing results... \n",
+      "['BIKE-L1', 'BIKE-L1', 'BIKE-L1', 'BIKE-L3', 'BIKE-L3', 'BIKE-L3', 'BIKE-L5', 'BIKE-L5', 'BIKE-L5', 'Classic-McEliece-348864', 'Classic-McEliece-348864', 'Classic-McEliece-348864', 'Classic-McEliece-348864f', 'Classic-McEliece-348864f', 'Classic-McEliece-348864f', 'Classic-McEliece-460896', 'Classic-McEliece-460896', 'Classic-McEliece-460896', 'Classic-McEliece-460896f', 'Classic-McEliece-460896f', 'Classic-McEliece-460896f', 'Classic-McEliece-6688128', 'Classic-McEliece-6688128', 'Classic-McEliece-6688128', 'Classic-McEliece-6688128f', 'Classic-McEliece-6688128f', 'Classic-McEliece-6688128f', 'Classic-McEliece-6960119', 'Classic-McEliece-6960119', 'Classic-McEliece-6960119', 'Classic-McEliece-6960119f', 'Classic-McEliece-6960119f', 'Classic-McEliece-6960119f', 'Classic-McEliece-8192128', 'Classic-McEliece-8192128', 'Classic-McEliece-8192128', 'Classic-McEliece-8192128f', 'Classic-McEliece-8192128f', 'Classic-McEliece-8192128f', 'HQC-128', 'HQC-128', 'HQC-128', 'HQC-192', 'HQC-192', 'HQC-192', 'HQC-256', 'HQC-256', 'HQC-256', 'Kyber512', 'Kyber512', 'Kyber512', 'Kyber768', 'Kyber768', 'Kyber768', 'Kyber1024', 'Kyber1024', 'Kyber1024', 'Kyber512-90s', 'Kyber512-90s', 'Kyber512-90s', 'Kyber768-90s', 'Kyber768-90s', 'Kyber768-90s', 'Kyber1024-90s', 'Kyber1024-90s', 'Kyber1024-90s', 'sntrup761', 'sntrup761', 'sntrup761', 'FrodoKEM-640-AES', 'FrodoKEM-640-AES', 'FrodoKEM-640-AES', 'FrodoKEM-640-SHAKE', 'FrodoKEM-640-SHAKE', 'FrodoKEM-640-SHAKE', 'FrodoKEM-976-AES', 'FrodoKEM-976-AES', 'FrodoKEM-976-AES', 'FrodoKEM-976-SHAKE', 'FrodoKEM-976-SHAKE', 'FrodoKEM-976-SHAKE', 'FrodoKEM-1344-AES', 'FrodoKEM-1344-AES', 'FrodoKEM-1344-AES', 'FrodoKEM-1344-SHAKE', 'FrodoKEM-1344-SHAKE', 'FrodoKEM-1344-SHAKE']\n"
      ]
     },
     {
@@ -21,11 +22,11 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 326\u001b[0m\n\u001b[0;32m    324\u001b[0m \u001b[39m\"\"\"Main boiler plate\"\"\"\u001b[39;00m\n\u001b[0;32m    325\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m__name__\u001b[39m \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m__main__\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m--> 326\u001b[0m     main()\n",
-      "Cell \u001b[1;32mIn[2], line 319\u001b[0m, in \u001b[0;36mmain\u001b[1;34m()\u001b[0m\n\u001b[0;32m    317\u001b[0m \u001b[39m# Processing the results\u001b[39;00m\n\u001b[0;32m    318\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mParsing results... \u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m--> 319\u001b[0m process_tests(machine_num)\n\u001b[0;32m    320\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39mResults have been processed - CSV files can be found in the Results Directory at the repo root\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[2], line 294\u001b[0m, in \u001b[0;36mprocess_tests\u001b[1;34m(num_machines)\u001b[0m\n\u001b[0;32m    292\u001b[0m \u001b[39m# Parsing results\u001b[39;00m\n\u001b[0;32m    293\u001b[0m speed_processing(type_speed_dir, up_speed_dir)\n\u001b[1;32m--> 294\u001b[0m memory_processing(type_mem_dir, up_mem_dir)\n\u001b[0;32m    295\u001b[0m gen_averages(type_speed_dir, type_mem_dir)\n",
-      "Cell \u001b[1;32mIn[2], line 178\u001b[0m, in \u001b[0;36mmemory_processing\u001b[1;34m(type_mem_dir, up_mem_dir)\u001b[0m\n\u001b[0;32m    174\u001b[0m \u001b[39mfor\u001b[39;00m operation \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m0\u001b[39m,\u001b[39m3\u001b[39m,\u001b[39m1\u001b[39m):\n\u001b[0;32m    175\u001b[0m \n\u001b[0;32m    176\u001b[0m     \u001b[39m# Parsing metrics and adding results to dataframe row\u001b[39;00m\n\u001b[0;32m    177\u001b[0m     sig_up_filename \u001b[39m=\u001b[39m sig_up_filename_pre \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m-\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m sig_alg \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m-\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m \u001b[39mstr\u001b[39m(operation) \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m-\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m \u001b[39mstr\u001b[39m(run_count) \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m.txt\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m--> 178\u001b[0m     peak_metrics \u001b[39m=\u001b[39m get_peak(sig_up_filename, peak_metrics)   \n\u001b[0;32m    179\u001b[0m     new_row\u001b[39m.\u001b[39mextend((sig_alg, sig_operations[operation]))\n\u001b[0;32m    180\u001b[0m     new_row\u001b[39m.\u001b[39mextend(peak_metrics)\n",
-      "Cell \u001b[1;32mIn[2], line 107\u001b[0m, in \u001b[0;36mget_peak\u001b[1;34m(mem_file, peak_metrics)\u001b[0m\n\u001b[0;32m    104\u001b[0m \u001b[39m# Parsing function from OQS Profile Project\u001b[39;00m\n\u001b[0;32m    105\u001b[0m \u001b[39m# Gets max memory metric from algorithm operation\u001b[39;00m\n\u001b[0;32m    106\u001b[0m peak \u001b[39m=\u001b[39m \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m\n\u001b[1;32m--> 107\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(mem_file, \u001b[39m\"\u001b[39;49m\u001b[39mr\u001b[39;49m\u001b[39m\"\u001b[39;49m) \u001b[39mas\u001b[39;00m lines:\n\u001b[0;32m    108\u001b[0m     \u001b[39mfor\u001b[39;00m line \u001b[39min\u001b[39;00m lines: \n\u001b[0;32m    109\u001b[0m         \u001b[39mif\u001b[39;00m line\u001b[39m.\u001b[39mstartswith(\u001b[39m\"\u001b[39m\u001b[39m Detailed snapshots: [\u001b[39m\u001b[39m\"\u001b[39m):\n",
+      "Cell \u001b[1;32mIn[5], line 318\u001b[0m\n\u001b[0;32m    316\u001b[0m \u001b[39m\"\"\"Main boiler plate\"\"\"\u001b[39;00m\n\u001b[0;32m    317\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m__name__\u001b[39m \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m__main__\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m--> 318\u001b[0m     main()\n",
+      "Cell \u001b[1;32mIn[5], line 311\u001b[0m, in \u001b[0;36mmain\u001b[1;34m()\u001b[0m\n\u001b[0;32m    309\u001b[0m \u001b[39m# Processing the results\u001b[39;00m\n\u001b[0;32m    310\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mParsing results... \u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m--> 311\u001b[0m process_tests(machine_num)\n\u001b[0;32m    312\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39mResults have been processed - CSV files can be found in the Results Directory at the repo root\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[5], line 286\u001b[0m, in \u001b[0;36mprocess_tests\u001b[1;34m(num_machines)\u001b[0m\n\u001b[0;32m    284\u001b[0m \u001b[39m# Parsing results\u001b[39;00m\n\u001b[0;32m    285\u001b[0m speed_processing(type_speed_dir, up_speed_dir)\n\u001b[1;32m--> 286\u001b[0m memory_processing(type_mem_dir, up_mem_dir)\n\u001b[0;32m    287\u001b[0m gen_averages(type_speed_dir, type_mem_dir)\n",
+      "Cell \u001b[1;32mIn[5], line 170\u001b[0m, in \u001b[0;36mmemory_processing\u001b[1;34m(type_mem_dir, up_mem_dir)\u001b[0m\n\u001b[0;32m    166\u001b[0m \u001b[39mfor\u001b[39;00m operation \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m0\u001b[39m,\u001b[39m3\u001b[39m,\u001b[39m1\u001b[39m):\n\u001b[0;32m    167\u001b[0m \n\u001b[0;32m    168\u001b[0m     \u001b[39m# Parsing metrics and adding results to dataframe row\u001b[39;00m\n\u001b[0;32m    169\u001b[0m     sig_up_filename \u001b[39m=\u001b[39m sig_up_filename_pre \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m-\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m sig_alg \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m-\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m \u001b[39mstr\u001b[39m(operation) \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m-\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m \u001b[39mstr\u001b[39m(run_count) \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m.txt\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m--> 170\u001b[0m     peak_metrics \u001b[39m=\u001b[39m get_peak(sig_up_filename, peak_metrics)   \n\u001b[0;32m    171\u001b[0m     new_row\u001b[39m.\u001b[39mextend((sig_alg, sig_operations[operation]))\n\u001b[0;32m    172\u001b[0m     new_row\u001b[39m.\u001b[39mextend(peak_metrics)\n",
+      "Cell \u001b[1;32mIn[5], line 99\u001b[0m, in \u001b[0;36mget_peak\u001b[1;34m(mem_file, peak_metrics)\u001b[0m\n\u001b[0;32m     96\u001b[0m \u001b[39m# Parsing function from OQS Profile Project\u001b[39;00m\n\u001b[0;32m     97\u001b[0m \u001b[39m# Gets max memory metric from algorithm operation\u001b[39;00m\n\u001b[0;32m     98\u001b[0m peak \u001b[39m=\u001b[39m \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m\n\u001b[1;32m---> 99\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(mem_file, \u001b[39m\"\u001b[39;49m\u001b[39mr\u001b[39;49m\u001b[39m\"\u001b[39;49m) \u001b[39mas\u001b[39;00m lines:\n\u001b[0;32m    100\u001b[0m     \u001b[39mfor\u001b[39;00m line \u001b[39min\u001b[39;00m lines: \n\u001b[0;32m    101\u001b[0m         \u001b[39mif\u001b[39;00m line\u001b[39m.\u001b[39mstartswith(\u001b[39m\"\u001b[39m\u001b[39m Detailed snapshots: [\u001b[39m\u001b[39m\"\u001b[39m):\n",
       "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\IPython\\core\\interactiveshell.py:282\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    275\u001b[0m \u001b[39mif\u001b[39;00m file \u001b[39min\u001b[39;00m {\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m}:\n\u001b[0;32m    276\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    277\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIPython won\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt let you open fd=\u001b[39m\u001b[39m{\u001b[39;00mfile\u001b[39m}\u001b[39;00m\u001b[39m by default \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    278\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    279\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39myou can use builtins\u001b[39m\u001b[39m'\u001b[39m\u001b[39m open.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    280\u001b[0m     )\n\u001b[1;32m--> 282\u001b[0m \u001b[39mreturn\u001b[39;00m io_open(file, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
       "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../../up-results/liboqs/mem-results/machine-1/sig-mem-metrics/sig-mem-metrics-SPHINCS+-SHA256-256f-simple-0-1.txt'"
      ]
@@ -85,46 +86,38 @@
     "    new_col_kem = [alg for alg in kem_algs for i in range(3)]\n",
     "    new_col_sig = [alg for alg in sig_algs for i in range(3)]\n",
     "    \n",
+    "        \n",
     "    # Reading the original csv files and formating\n",
     "    for file_count in range(1,16,1):\n",
     "\n",
     "        \"\"\"Formating Kem Files\"\"\"\n",
-    "        # Loading kem file into dataframe and stiping trailing space in columns headers\n",
+    "        # Loading kem file into dataframe\n",
     "        filename_kem_pre = up_speed_dir + kem_prefix + str(file_count) + \".csv\"\n",
     "        temp_df = pd.read_csv(filename_kem_pre, delimiter=\"|\", index_col=False)\n",
-    "        temp_df.columns = [col.strip() for col in temp_df.columns]\n",
     "\n",
+    "        # Striping trailing spaces and removing algorithms from Operation\n",
+    "        temp_df.columns = [col.strip() for col in temp_df.columns]\n",
     "        temp_df = temp_df.loc[~temp_df['Operation'].str.strip().isin(kem_algs)]\n",
-    "        temp_df.to_csv(\"../test.csv\")\n",
-    "        # # Removing any now that is not a kem operation\n",
-    "        # for index, row in temp_df.iterrows():\n",
-    "        #     print(f\"row - {index}, row contents = {row['Operation']}\")\n",
-    "        #     if row['Operation'].strip() not in kem_operations:\n",
-    "                \n",
-    "        #         temp_df.drop(index, inplace=True)\n",
-    "        # temp_df.to_csv(\"../test3.csv\", index=False)\n",
-    "        \n",
-    "        # Inserting new column and outputing formated csv\n",
+    "        temp_df = temp_df.applymap(lambda val: val.strip() if isinstance(val, str) else val)\n",
+    "\n",
+    "        # Inserting new algorithm column and outputing formated csv\n",
     "        temp_df.insert(0, \"Algorithm\", new_col_kem)\n",
     "        filename_kem = type_speed_dir + kem_prefix + str(file_count) + \".csv\"\n",
     "        temp_df.to_csv(filename_kem, index=False)\n",
+    "\n",
     "\n",
     "        \"\"\"Formating Digital Signature Files\"\"\"\n",
     "        # Loading kem file into dataframe and stiping trailing space in columns headers\n",
     "        filename_sig_pre = up_speed_dir + sig_prefix + str(file_count) + \".csv\"\n",
     "        temp_df = pd.read_csv(filename_sig_pre, delimiter=\"|\", index_col=False)\n",
+    "\n",
+    "        # Striping trailing spaces and removing algorithms from Operation\n",
     "        temp_df.columns = [col.strip() for col in temp_df.columns]\n",
     "        temp_df = temp_df.loc[~temp_df['Operation'].str.strip().isin(sig_algs)]\n",
-    "        temp_df.to_csv(\"../test.csv\")\n",
-    "\n",
-    "        temp_df.to_csv('../test4.csv', index=False)        \n",
-    "\n",
-    "        # for index, row in temp_df.iterrows():\n",
-    "        #     if row['Operation'].strip() not in sig_operations:\n",
-    "        #         temp_df.drop(index, inplace=True)\n",
+    "        temp_df = temp_df.applymap(lambda val: val.strip() if isinstance(val, str) else val)\n",
     "\n",
     "        # Inserting new column and outputting formated csv\n",
-    "        #temp_df.insert(0, 'Algorithm', new_col_sig)\n",
+    "        temp_df.insert(0, 'Algorithm', new_col_sig)\n",
     "        filename_sig = type_speed_dir + sig_prefix + str(file_count) + \".csv\"\n",
     "        temp_df.to_csv(filename_sig, index=False)\n",
     "\n",
