--- a/result-processing/parsing-scripts/jupyter-parse.ipynb
+++ b/result-processing/parsing-scripts/jupyter-parse.ipynb
@@ -217,7 +217,7 @@
     "    sig_mem_file_prefix = type_mem_dir + \"sig-mem-metrics-\"\n",
     "\n",
     "    # Declaring dataframes and fieldnames\n",
-    "    #mem_fieldnames = [\"Algorithm\", \"Operation\", \"intits\", \"maxBytes\", \"maxHeap\", \"extHeap\", \"maxStack\"]\n",
+    "    mem_fieldnames = [\"Algorithm\", \"Operation\", \"intits\", \"maxBytes\", \"maxHeap\", \"extHeap\", \"maxStack\"]\n",
     "    speed_fieldnames = [\"Algorithm\", \"Operation\", \"\"]\n",
     "\n",
     "\n",
