--- a/result-processing/block-testing.ipynb
+++ b/result-processing/block-testing.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
      "text": [
       "win\n",
       "..\\\\..\\\\\n",
-      "..\\\\..\\\\result-processing\\algs\\kem-algs-list.txt\n"
+      "result-processing\\algs\\kem-algs-list.txt\n"
      ]
     }
    ],
@@ -47,8 +47,8 @@
     "\n",
     "def get_system_type() :\n",
     "    \"\"\"Function for checking the system type and setting root_dir path\"\"\"\n",
-    "    global root_dir, system_type\n",
     "    # Checking and storing system type\n",
+    "    global root_dir, system_type\n",
     "    if sys.platform == \"win32\":\n",
     "        \n",
     "        system_type = \"win\"\n",
@@ -87,7 +87,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -101,12 +101,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
+    "hash": "570feb405e2e27c949193ac68f46852414290d515b0ba6e5d90d076ed2284471"
    }
   }
  },
